--- a/src/app/index.css
+++ b/src/app/index.css
@@ -4,6 +4,6 @@
     box-sizing: border-box;
   }
 main {
-    background-color: antiquewhite;
+    background-color: rgb(119, 118, 117);
     min-height: calc(100vh - 100px);
   }
